SPE_Majorproject-main/k8/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: mern-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gaganreddy508/spe-client:latest
          resources:
            # --- RESOURCES ADJUSTMENT START ---
            requests:
              memory: "512Mi" # Guarantee the pod gets at least 512MB
              cpu: "250m"
            limits:
              memory: "2048Mi" # Set the hard limit higher (1GB) to prevent OOM termination
              cpu: "500m"      # Increase CPU limit slightly for faster compilation
            # --- RESOURCES ADJUSTMENT END ---
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # --- NECESSARY ADDITION TO USE THE CONFIGMAP ---
