SPE_Majorproject-main/k8/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080       # ClusterIP port
      targetPort: 8080 # container port
      nodePort: 30002  # choose any free NodePort above 30000
  type: NodePort
